--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,10 @@
     font-family: "Montserrat", sans-serif;
   }
   body {
-    background: #eee;
     padding: 0 16px;
+    background-color: #f8f8f8;
+    background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+    /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */    
   }
   
   .header {
